# 2024_Analysis_Minesweeper-Game

./: .gitignore  .gitmodules  Board.cpp  CMakeLists.txt  Cell.cpp  Header.h  Main.cpp  Minesweeper.cpp  ProjectAnalysisReport.md  README.md  Utility.cpp
cppcheck/: cppcheck-report.txt  custom.patch  output.xml  output_improved.xml  run_cppcheck.ps1
cppcheck/report/: 0.html  1.html  2.html  index.html  stats.html
fuzz/: fuzz_target.cpp  run_fuzz.sh
fuzz/corpus/: seed1
patches/: changes.patch
unit_tests/: RunningTests.md  run_coverage.ps1
unit_tests/tests/: test_board.cpp  test_comprehensive.cpp  test_gameplay.cpp  test_minesweeper_advanced.cpp
valgrind/callgrind/: callgrind.ms_tests.out  callgrind.ms_tests.txt  callgrind.ms_tests_full.txt  callgrind.out.1  callgrind.out.2  callgrind.out.3  callgrind.out.4  callgrind.out.5  callgrind.out.test  callgrind_cache_report.txt  ms_functions_only.txt  ms_tests_full_noauto.txt  run_callgrind.sh
